--- a/package.json
+++ b/package.json
@@ -10,8 +10,21 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.8.2",
     "@astrojs/check": "^0.6.0",
+    "@astrojs/react": "^3.3.4",
+    "@astrojs/tailwind": "^5.1.0",
+    "@nanostores/react": "^0.7.2",
+    "@tsparticles/react": "^3.0.0",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
+    "astro": "^4.8.2",
+    "nanostores": "^0.10.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-particles": "^2.12.2",
+    "tailwindcss": "^3.4.3",
+    "tsparticles": "^2.12.0",
+    "tsparticles-engine": "^2.12.0",
     "typescript": "^5.4.5"
   }
 }
