--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.9.2",
+    "luxon": "^3.4.4",
     "nanostores": "^0.10.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -27,5 +28,8 @@
     "tsparticles": "^2.12.0",
     "tsparticles-engine": "^2.12.0",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@types/luxon": "^3.4.2"
   }
 }
