--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/luxon": "^3.4.2"
   }
 }
