--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-particles": "^2.12.2",
+    "react-responsive-masonry": "^2.4.1",
     "tailwindcss": "^3.4.3",
     "tsparticles": "^2.12.0",
     "tsparticles-engine": "^2.12.0",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
-    "@types/luxon": "^3.4.2"
+    "@types/luxon": "^3.4.2",
+    "@types/react-responsive-masonry": "^2.1.3"
   }
 }
