--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@astrojs/mdx": "^3.1.1",
     "@astrojs/react": "^3.4.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@fancyapps/ui": "^5.0.36",
     "@nanostores/react": "^0.7.2",
+    "@supabase/supabase-js": "^2.45.6",
     "@tsparticles/react": "^3.0.0",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
@@ -24,15 +26,14 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-particles": "^2.12.2",
-    "react-responsive-masonry": "^2.4.1",
     "tailwindcss": "^3.4.3",
     "tsparticles": "^2.12.0",
     "tsparticles-engine": "^2.12.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "yet-another-react-lightbox": "^3.21.6"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
-    "@types/luxon": "^3.4.2",
-    "@types/react-responsive-masonry": "^2.1.3"
+    "@types/luxon": "^3.4.2"
   }
 }
