--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.9.2",
+    "embla-carousel": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
+    "extract-colors": "^4.1.0",
     "luxon": "^3.4.4",
     "nanostores": "^0.10.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-particles": "^2.12.2",
+    "react-photo-album": "^3.0.2",
     "tailwindcss": "^3.4.3",
     "tsparticles": "^2.12.0",
     "tsparticles-engine": "^2.12.0",
